[project]
name = "petprint"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pymupdf (>=1.25.1,<2.0.0)",
    "win32printing (>=0.1.3,<0.2.0) ; sys_platform == \"win32\"",
    "pycups (>=2.0.4,<3.0.0) ; sys_platform == \"darwin\" or sys_platform == \"linux\"",
]

[tool.poetry]
package-mode = true


[tool.poetry.group.dev.dependencies]
mypy = "^1.16.1"
black = "^25.1.0"
isort = "^6.0.1"
flake8 = "^7.3.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry-pyinstaller-plugin.scripts]
petprint = { source = "petprint.py", type = "onefile", bundle = true, windowed = true }